# efdl_project

./: .gitignore  README.md  llama_matmul_benchmark.csv  llama_matmul_benchmark_tuned.csv  pyproject.toml  wikitext2_int4_small_eval.json  wikitext2_int4_smoke.json
src/: benchmark_llama_matmul.py  eval_wikitext2_int4.py  plot_weight_quant_distributions.py  quantized_linear_int4.py  triton_int4.py
src/notebooks/: triton_int4_quant_pack_mvp.ipynb  triton_x16_w4t_matmul_benchmark.ipynb
