[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "ipykernel",
    "transformers>=5.6.2",
    "datasets>=4.8.4",
    "accelerate>=1.13.0",
    "torch==2.5.1+cu121",
    "matplotlib>=3.10.9",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
default = true
